[gd_scene load_steps=2 format=3 uid="uid://dqnpdgtv7v2or"]

[ext_resource type="Script" uid="uid://dfol5n8k2631x" path="res://scenes/ui/menus/main_menu/menu.gd" id="1_s63no"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_s63no")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 70.0
offset_bottom = 150.0

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Title"

[node name="MainButtons" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="StartGameButton" type="Button" parent="VBoxContainer/MainButtons"]
layout_mode = 2
text = "Start"

[node name="SettingsButton" type="Button" parent="VBoxContainer/MainButtons"]
layout_mode = 2
text = "Settings"

[node name="ExitButton" type="Button" parent="VBoxContainer/MainButtons"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="VBoxContainer/MainButtons/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MainButtons/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MainButtons/ExitButton" to="." method="_on_exit_button_pressed"]
